module(name = "com_github_buildbarn_go_xdr")

bazel_dep(name = "gazelle", version = "0.35.0")
bazel_dep(name = "rules_antlr")
bazel_dep(name = "rules_go", version = "0.46.0")

git_override(
    module_name = "rules_antlr",
    commit = "89a29cca479363a5aee53e203719510bdc6be6ff",
    init_submodules = True,
    patches = [
        "//:patches/rules_antlr/antlr-4.10.diff",
        "//:patches/rules_antlr/bzlmod.diff",
    ],
    remote = "https://github.com/marcohu/rules_antlr.git",
)

antlr = use_extension("@rules_antlr//antlr:extensions.bzl", "antlr")
antlr.download(version = "4.10")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "cc_mvdan_gofumpt",
    "com_github_antlr_antlr4_runtime_go_antlr",
    "com_github_golang_mock",
    "com_github_gordonklaus_ineffassign",
    "com_github_stretchr_testify",
    "org_golang_x_sync",
)

go_deps_dev = use_extension("@gazelle//:extensions.bzl", "go_deps", dev_dependency = True)
go_deps_dev.module_override(
    patches = ["//:patches/com_github_golang_mock/mocks-for-funcs.diff"],
    path = "github.com/golang/mock",
)
