load("@bazel_gomock//:gomock.bzl", "gomock")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

gomock(
    name = "aliases",
    out = "aliases.go",
    interfaces = [
        "Context",
        "Reader",
        "Writer",
    ],
    library = "//internal/mock/aliases",
    package = "mock",
)

gomock(
    name = "rpcserver",
    out = "rpcserver.go",
    interfaces = [
        "Authenticator",
        "Service",
    ],
    library = "//pkg/rpcserver",
    package = "mock",
)

go_library(
    name = "mock",
    srcs = [
        "aliases.go",
        "rpcserver.go",
    ],
    importpath = "github.com/buildbarn/go-xdr/internal/mock",
    visibility = ["//:__subpackages__"],
    # keep
    deps = [
        "//pkg/protocols/rpcv2",
        "@com_github_golang_mock//gomock",
    ],
)
