load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "rpcserver",
    srcs = ["server.go"],
    importpath = "github.com/buildbarn/go-xdr/pkg/rpcserver",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/protocols/rpcv2",
        "@org_golang_x_sync//errgroup",
    ],
)

go_test(
    name = "rpcserver_test",
    srcs = ["server_test.go"],
    deps = [
        ":rpcserver",
        "//internal/mock",
        "//pkg/protocols/rpcv2",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//require",
    ],
)
