load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "model",
    srcs = [
        "bool_type.go",
        "constant_definition.go",
        "constant_resolving_value_visitor.go",
        "constant_value.go",
        "declaration.go",
        "definition.go",
        "emitting_integer_value_visitor.go",
        "enum_type.go",
        "fixed_length_array_type.go",
        "fixed_length_opaque_type.go",
        "floating_point_type.go",
        "foreign_identifier.go",
        "identifier.go",
        "identifier_factory.go",
        "identifier_type.go",
        "identifier_value.go",
        "integer_type.go",
        "named_declaration.go",
        "optional_type.go",
        "procedure.go",
        "program_definition.go",
        "registry.go",
        "resolver.go",
        "root_identifier_factory.go",
        "sink.go",
        "string_type.go",
        "struct_type.go",
        "top_level.go",
        "type.go",
        "type_definition.go",
        "union_type.go",
        "value.go",
        "value_visitor.go",
        "variable_length_array_type.go",
        "variable_length_opaque_type.go",
        "version.go",
        "void_declaration.go",
    ],
    importpath = "github.com/buildbarn/go-xdr/pkg/compiler/model",
    visibility = ["//visibility:public"],
)
