load("//:xdr.bzl", "go_xdr_library")
load("//pkg/compiler/tests:diff.bzl", "diff_test")
load("@rules_go//go:def.bzl", "go_library", "go_test")

go_xdr_library(
    name = "rfc4506_generated",
    src = "rfc4506.x",
)

diff_test(
    name = "diff_test",
    after = ":rfc4506_generated",
    before = "rfc4506.go",
)

go_library(
    name = "rfc4506",
    srcs = ["rfc4506.go"],
    importpath = "github.com/buildbarn/go-xdr/pkg/compiler/tests/rfc4506",
    visibility = ["//visibility:public"],
    deps = ["//pkg/runtime"],
)

go_test(
    name = "rfc4506_test",
    srcs = ["rfc4506_test.go"],
    deps = [
        ":rfc4506",
        "@com_github_stretchr_testify//require",
    ],
)
